2008-10-12  Pamela Greene  <pam@chromium.org>

        Fix a race condition by waiting for all create functions to be called
        before terminating.
        See https://bugs.webkit.org/show_bug.cgi?id=21531

        Reviewed by Darin Adler.
        Landed by Adam Barth.

        * platform/mac/svg/carto.net/window-expected.checksum:
        * platform/mac/svg/carto.net/window-expected.png:
        * platform/mac/svg/carto.net/window-expected.txt:
        * svg/carto.net/window.svg:

2008-10-12  Pamela Greene  <pam@chromium.org>

        Remove inadvertent const redefinition, and add specific test for it.
        See https://bugs.webkit.org/show_bug.cgi?id=21532

        Reviewed by Darin Adler.
        Landed by Adam Barth.

        * fast/js/const-expected.txt:
        * fast/js/resources/const.js:

2008-10-12  Pamela Greene  <pam@chromium.org>

        Add a test for null character data.
        See https://bugs.webkit.org/show_bug.cgi?id=21535

        Reviewed by Darin Adler.
        Landed by Adam Barth.

        * fast/dom/null-chardata-crash-expected.txt: Added.
        * fast/dom/null-chardata-crash.html: Added.

2008-10-12  Glenn Wilson  <gwilson@google.com>

        Reviewed by Darin Adler.

        - https://bugs.webkit.org/show_bug.cgi?id=20461

        Added new test to verify that the user can cut and paste multiple lines of text
        into a single line text field.

        * fast/forms/paste-multiline-text-input-expected.txt: Added.
        * fast/forms/paste-multiline-text-input.html: Added.
        * fast/forms/input-truncate-newline-expected.txt: Removed.
        * fast/forms/input-truncate-newline.html: Removed.

        * fast/forms/8250-expected.txt: Added.
        * fast/forms/8250.html: Updated test to be text-only and expect new results.
        * platform/mac/fast/forms/8250-expected.checksum: Removed.
        * platform/mac/fast/forms/8250-expected.png: Removed.
        * platform/mac/fast/forms/8250-expected.txt: Removed.