@@ -1,5 +1,15 @@
 2008-10-12  Pamela Greene  <pam@chromium.org>
 
+        Fix test when removesExtraParentheses == false.
+        See https://bugs.webkit.org/show_bug.cgi?id=21529
+
+        Reviewed by Darin Adler.
+        Landed by Adam Barth.
+
+        * fast/js/resources/function-toString-parentheses.js:
+
+2008-10-12  Pamela Greene  <pam@chromium.org>
+
         Fix a race condition by waiting for all create functions to be called
         before terminating.
         See https://bugs.webkit.org/show_bug.cgi?id=21531
